--- a/src/assets/styles/BackgroundStyles.css
+++ b/src/assets/styles/BackgroundStyles.css
@@ -1,5 +1,6 @@
 .background-component {
-  background-color: #d6d7d9;
+  /* background-color: #d6d7d9; */
+
   width: 100%;
   height: 100vh;
   display: flex;
@@ -19,4 +20,53 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.new-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1195px;
+  height: 642px;
+  background-color: white;
+  border-radius: 50px;
+  border: outset;
+}
+
+.btn-lrg {
+  background-color: black;
+  color: white;
+  font-size: 32px;
+  height: 70px;
+  width: 717px;
+  left: 239px;
+  top: 488px;
+  border-radius: 30px;
+  position: fixed;
+}
+
+.btn-med {
+  background-color: black;
+  color: white;
+  font-size: 30px;
+  height: 73px;
+  width: 441px;
+  left: 119px;
+  top: 488px;
+  border-radius: 30px;
+  position: fixed;
+}
+
+.btn-cancel {
+  background-color: rgb(0, 0, 0);
+  opacity: 30%;
+  color: white;
+  font-size: 30px;
+  height: 73px;
+  width: 441px;
+  left: 623px;
+  top: 488px;
+  border-radius: 30px;
+  position: fixed;
 }
